--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "foss-nsbm-official-web-v2.0",
+  "type": "module",
   "version": "0.0.1",
-  "private": true,
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro build",
+    "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/vercel": "^7.3.6",
-    "astro": "^1.1.5"
-  },
-  "devDependencies": {
-    "@astrojs/tailwind": "^1.0.0"
+    "@astrojs/check": "^0.5.9",
+    "@astrojs/tailwind": "^5.1.0",
+    "astro": "^4.5.3",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.4.2"
   }
 }
